# BayDuBiG

./: Demo.R  README.md  demo_data.rds
BayDubig/: DESCRIPTION  NAMESPACE
BayDubig/R/: BayDuBiG.R  RcppExports.R
BayDubig/src/: Baydubig_mcmc.cpp  CMakeLists.txt  RcppExports.cpp
Demo/: Demo.R
